# codeleap-challenge

./: README.md  postman_collection.json  pyproject.toml
app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_reaction.py
config/: asgi.py  settings.py  urls.py  wsgi.py
